# mercure

./: .codespellrc  .dockerignore  .flake8  .gitignore  .hgignore  .isort.cfg  .travis.yml  CODE_OF_CONDUCT.md  INSTALL.md  Jenkinsfile  LICENSE  README.md  VERSION  bookkeeper.py  build-docker.sh  cleaner.py  dev-requirements.in  dev-requirements.txt  dispatcher.py  docker-build.sh  docker-push.sh  install.sh  manage.py  metabase_install.sh  mypy.ini  processor.py  push-docker.sh  pytest.ini  receiver.sh  requirements.in  requirements.txt  router.py  test-bad-dcm.py  test.py  test_header_spoofing.py  test_supervisor.py  webgui.py
app/: VERSION  bookkeeper.py  cleaner.py  dev-requirements.in  dev-requirements.txt  dispatcher.py  manage.py  mypy.ini  processor.py  pyproject.toml  pytest.ini  receiver.sh  requirements.in  requirements.txt  router.py  test.py  webgui.py  worker.py
app/alembic/: env.py
app/alembic/versions/: 1c51b42f13d5_self_tests_2.py  31a5db4f993e_subtasks.py  57724e1ea282_init_revision.py  6041e3878f32_self_tests.py  9c38f4f15a29_processor_outputs.py  (+3 more)
app/bookkeeping/: bookkeeper.py  config.py  database.py  helper.py  query.py
app/common/: config.py  constants.py  credentials.py  event_types.py  generate_test_series.py  helper.py  influxdb.py  log_helpers.py  monitor.py  notification.py  rule_evaluation.py  tags_rule_interface.py  tagslist.py  types.py  version.py
app/dispatch/: dispatcher.py  process_dcmsend_result.py  retry.py  send.py  status.py
app/process/: docker_runtime.py  nomad_runtime.py  podman_runtime.py  process_series.py  processor.py  runtime_base.py  sigstore.py  status.py
app/routing/: common.py  generate_taskfile.py  route_series.py  route_studies.py  router.py
app/tests/: conftest.py  generate_dicoms.py  getdcmtags.py  test_bookkeeper.py  test_cleaner.py  test_dicomweb.py  test_dicomweb_gcp_auth.py  test_docker_arg_validation.py  test_dynamic_routing.py  test_integration.py  test_notifications.py  test_processor.py  test_pydantic.py  test_query.py  test_router.py  test_sigstore.py  test_studies.py  test_webui.py  testing_common.py  testing_integration_common.py
app/webinterface/: api.py  common.py  dicom_client.py  modules.py  queue.py  rules.py  services.py  targets.py  users.py
getdcmtags/: CMakeLists.txt  Dockerfile  Makefile  build.sh  check_version.sh  getdcmtags.pro  main.cpp  tags_list.h  test.py  test.sh  test_dcm
(+396 files in other folders)
