[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiofiles>=23.2.1",
    "aiohttp>=3.10.11",
    "aiosqlite~=0.20.0",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "bleach~=6.2.0",
    "boto3>=1.34.123",
    "certifi>=2024.7.4",
    "daiquiri>=3.2.5.1",
    "databases[aiopg]<=0.8.0",
    "dataclasses ; python_full_version < '3.7'",
    "dicomweb-client>=0.59.1",
    "distro>=1.9.0",
    "docker>=7.1.0",
    "freezegun>=1.4.0",
    "future>=0.18.3",
    "graphyte>=1.7.1",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.27.2",
    "hupper>=1.12.1",
    "influxdb-client>=1.43.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "lxml>=4.9.1",
    "mako>=1.2.2",
    "mypy<1.9.0",
    "passlib>=1.7.4",
    "pillow>=10.0.1",
    "psycopg2>=2.9.9",
    "pydantic>=1.10.9,<2.0.0",
    "pydicom~=2.4.1",
    "pyfakefs~=4.5.5",
    "pynetdicom~=2.0.2",
    "pytest>=8.2.2",
    "pytest-mock>=3.14.0",
    "pytest-subprocess>=1.5.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.18",
    "python-nomad>=2.0.1",
    "pyxnat>=1.6.2",
    "requests>=2.32.4",
    "rq~=1.16.2",
    "rq-scheduler~=0.13.1",
    "sphinx==5.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sqlalchemy<=1.4.52",
    "starlette>=0.40.0",
    "starlette-auth-toolkit>=0.5.0",
    "starlette-decorouter>=1.0.0",
    "types-bleach>=6.2.0.20241123",
    "types-jinja2>=2.11.9",
    "types-python-dateutil>=2.9.0.20241003",
    "types-requests>=2.32.0.20240602",
    "typing-extensions>=4.12.2",
    "urllib3>=2.2.2",
    "uvicorn>=0.30.6",
    "watchdog>=4.0.1",
    "wheel>=0.38.1",
]

[dependency-groups]
dev = [
    "fakeredis>=2.30.1",
    "pytest>=8.2.2",
    "pytest-asyncio>=1.0.0",
    "requests-toolbelt>=1.0.0",
    "supervisor>=4.2.5",
]
